# Compiler

./: .gitignore  README.md  license.txt  todo.md
current/: CMakeLists.txt  current.h  demo.j  exampleProg.j  myAwesomeJasminFile.j
current/include/: ast.h  ast.hpp  cliConfig.h  jasminGenerator.h  logger.h  mockParse.h  parser.h  scanner.h  semanticAnalysis.h  semanticAnalyzer.h  subject.h  subscriber.h  symbolTable.h  tokens.h  traverseAST.h
current/src/: main.cpp  scanner.cpp
current/src/codeGeneration/: jasminGenerator.cpp  semanticAnalysis.cpp  symbolTable.cpp  traverseAST.cpp
current/src/helpers/: cliConfig.cpp  logger.cpp
current/src/parser/: ast.cpp  parser.cpp
part0/: CMakeLists.txt  README.txt  commands.txt
part0/include/: file#1.h  file#2.h  file1.hpp  file2.hpp
part0/src/: file#1.cpp  file#2.cpp  file1.cpp  file2.cpp  main.cpp
part1/: CMakeLists.txt  part1.cpp  part1.h  test.tc
part1/include/: cliConfig.h  logger.h  scanner.h
part1/src/: cliConfig.cpp  logger.cpp  main.cpp  scanner.cpp
testFiles/: comments.tc  exampleProg.tc  groupOne.tc  groupTwo.tc  illegalCheck.tc  lineCount.tc  primary.tc  properMain.tc  st2.tc  stringsChars.tc  tokensKeywords.tc  varTest.tc
testFiles/generator/: demo.tc  easy.tc  exampleProg.tc  test2BAD.tc
testFiles/parser/: easyProg.tc  edgeCase.tc  errorReporting.tc  exampleProg.tc  hardProg.tc  nodeTest.tc  prog.tc  veryHardProg.tc
testFiles/scanner/: illegalCheck.tc  lineCount.tc  st1.tc
tokens/: tokens_keywords.md
